Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-61454

Incorrect number of parameters passed to fmt::format

    XMLWordPrintable

Details

    • Triaged
    • 0
    • No
    • March-June 24

    Description

      https://src.couchbase.org/source/xref/7.6.1/kv_engine/engines/ep/src/range_scans/range_scan.cc?r=d82cadba#945-956

      The value for scanContinueDeadline is missing (but is part of limits which is formatted as the first parameter)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            trond Trond Norbye
            trond Trond Norbye
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty