MB-61454: Wrong number of arguments passed to fmt::format

scanContinueDeadline is part of limits which is formatted as
part of the formatter for limits.

Change-Id: Ib866adb4abf5a6358a50d59c1e024b5be13300f1
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/208305
Well-Formed: Restriction Checker
Reviewed-by: Jim Walker <jim@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>